@@ -1,54 +1,58 @@
 package com.example.projeto_aerj.beta.valueObjects;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.persistence.Embeddable;
-import jakarta.persistence.Embedded;
 
+import java.net.IDN;
 import java.util.regex.Pattern;
 
 @Embeddable
 public class EmailValue {
+
     private String email;
 
-    public EmailValue() {
-    }
-
     private static final Pattern EMAIL_PATTERN = Pattern.compile(
-            "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$" //
+            "^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$"
     );
 
+    public EmailValue() {}
+
     public EmailValue(String email) {
-        if (email == null || email.trim().isEmpty()) {
+        setEmail(email);
+    }
+
+    @JsonProperty("email")
+    public String getEmail() {
+        return email;
+    }
+
+    @JsonProperty("email")
+    public void setEmail(String receivedEmail) {
+        if (receivedEmail == null || receivedEmail.isBlank()) {
             throw new IllegalArgumentException("Email não pode ser nulo ou vazio");
         }
 
-        String emailToFormat = email.trim().toLowerCase();
+        String formatted = receivedEmail.trim().toLowerCase();
 
-        if (!EMAIL_PATTERN.matcher(emailToFormat).matches()) {
-            throw new IllegalArgumentException("Email inválido: " + email);
+        formatted = normalizeEmail(formatted);
+
+        if (!EMAIL_PATTERN.matcher(formatted).matches()) {
+            throw new IllegalArgumentException("Email inválido");
         }
 
-        this.email = emailToFormat;
+        this.email = formatted;
     }
 
-    public String getValue() {
-        return email;
-    }
+    // normaliza domínios com caracteres especiais (IDN)
+    private String normalizeEmail(String email) {
+        int atIndex = email.lastIndexOf('@');
+        if (atIndex == -1) return email;
 
-    @Override
-    public boolean equals(Object emailObject) {
-        if (this == emailObject) return true;
-        if (emailObject == null || getClass() != emailObject.getClass()) return false;
-        EmailValue that = (EmailValue) emailObject;
-        return email.equals(that.email);
-    }
+        String localPart = email.substring(0, atIndex);
+        String domain = email.substring(atIndex + 1);
 
-    @Override
-    public int hashCode() {
-        return email.hashCode();
-    }
+        String asciiDomain = IDN.toASCII(domain);
 
-    @Override
-    public String toString() {
-        return email;
+        return localPart + "@" + asciiDomain;
     }
 }
